<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input_text_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:hint="City"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#9C27B0" />

    <TextView
        android:id="@+id/input_text_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_text_city"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:hint="DateTimeFormat"
        android:text="@string/current_date_time"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="#9C27B0" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:src="@drawable/drizzle" />

    <TextView
        android:id="@+id/input_text_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weather_icon"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:hint="Humidity"
        android:text="@string/humidity"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="#9C27B0" />

    <TextView
        android:id="@+id/input_text_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_text_humidity"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:hint="Pressure"
        android:text="@string/pressure"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="#9C27B0" />

    <TextView
        android:id="@+id/current_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:hint="Current Temperature"
        android:text="@string/current_temperature"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#9C27B0" />

</RelativeLayout>